This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2022-10-14:

- Fixed: the generic --version option was not recognised for the built-in
  commands ., bg, disown, fc, fg, hist, jobs, let, source, times, and ulimit.

- Fixed a bug introduced by the 2022-10-07 BUG_BRACQUOT fix, which caused the
  fallback string in an expansion like ${emptyvar:-fallback string} to fail to
  split into fields correctly if the fallback string contained a !, ^ or -.

- Fixed a few different build errors on Haiku that prevented ksh from compiling
  with the mkservice and eloop builtins enabled, caused compiling with -lnetwork
  to fail, and could interrupt the build with crash report popups.

2022-10-13:

- Added a -V/--novmon option to ulimit that supports setting the number of open
  vnodes (only applies to Haiku).

- Fixed a bug on Haiku that caused the ulimit command to print '(null)' in the
  error string when 'ulimit -t' fails.

- 'ulimit -a' no longer exits immediately after an error occurs when failing
  to get the current limits for cpu time and file size on Haiku.

2022-10-11:

- Fixed a bug that caused inconsistent behavior when handling a dangling
  backslash in a case statement.

2022-10-07:

- Fixed BUG_BRACQUOT: single and double shell quotes did not work to escape
  the !, ^ or - operators in a bracket expression within a glob pattern.

- The -e option of test/[/[[ no longer returns true for pseudodevices that are
  only supported by the shell and do not in fact exist in the file system, such
  as /dev/tcp/*. This reverts a change made in ksh 93u- on 2010-08-24.

2022-09-28:

- Fixed a bug where LINENO was reset to 1 after being temporarily changed in
  an assignment preceding a regular command (e.g. LINENO=5 true).

2022-09-27:

- Fixed a parsing bug in (uncommonly used) function definitions of the